5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1596_842.log
== TEST (2019-03-21 19:48:06) 
-- CODE:
var = int(input("Digite 4 numeros: "))
print(var+var+var+var)
-- OUTPUT:
36692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:49:53) 
-- CODE:
var = int(input("Digite 4 numeros: "))
print(var)
-- OUTPUT:
9173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:52:10) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var/1 + var/2 + var/3 + var/4
print(soma)
-- OUTPUT:
19110.416666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:53:12) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var + var + var + var
print(soma)
-- OUTPUT:
36692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:55:18) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = (round(var, 1) + round(var, 2) + round(var, 3) + round(var, 4))
print(soma)
-- OUTPUT:
36692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:57:06) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 4 + var // 3 + var // 2 + var //1
print(soma)
-- OUTPUT:
19109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:57:37) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000
print(soma)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:57:55) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000
print(soma)
-- OUTPUT:
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:58:17) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:58:23) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- EXECUTION TIME:
0.136702
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:58:26) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- EXECUTION TIME:
0.151328
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:58:58) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:59:30) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:59:37) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:59:43) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- EXECUTION TIME:
0.1339
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:00:20) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:00:38) 
-- CODE:
var = int(input("Digite 4 numeros: "))

print(var)
-- OUTPUT:
9173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:00:56) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(var)
-- EXECUTION TIME:
0.181368
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9173
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1010
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:00:57) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(var)
-- OUTPUT:
9173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:01:13) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- EXECUTION TIME:
0.146369
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:01:15) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var//1000 + var//1000 + var//1000
print(soma)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:04:03) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var // 100 + var // 10 + var // 1
print(soma)
-- OUTPUT:
10190
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:04:19) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var // 100 + var // 10 
print(soma)
-- OUTPUT:
1017
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:04:32) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 
print(soma)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:04:52) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 
print(soma)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:06:28) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var // 1000 
print(soma)
-- OUTPUT:
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:06:57) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var // 1000 + var
print(soma)
-- OUTPUT:
9191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:07:00) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 + var // 1000 + var
print(soma)
-- OUTPUT:
9191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:08:25) 
-- CODE:
var = int(input("Digite 4 numeros: "))
soma = var // 1000 % var
print(soma)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:54:22) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num/100 % a
print(a)
print(b)
-- OUTPUT:
9
1.730000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:55:41) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//100 % a
print(a)
print(b)
-- OUTPUT:
9
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:56:01) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//1000 % a
print(a)
print(b)
-- OUTPUT:
9
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:56:22) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//100 
print(a)
print(b)
-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:59:37) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//1000 % a
print(a)
print(b)
-- OUTPUT:
9
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:00:07) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 % a
b = num//1000 
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = num//1000 % a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:00:39) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//100
print(a)
print(b)
-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:00:52) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//100
print(a)
print(b)
-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:01:06) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//100
print(a)
print(b)
-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:03:02) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//100 % a
print(a)
print(b)
-- OUTPUT:
9
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:03:31) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//1000 % a
print(a)
print(b)
-- OUTPUT:
9
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:03:50) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//10 % a
print(a)
print(b)
-- OUTPUT:
9
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:04:08) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//100 % a
print(a)
print(b)
-- OUTPUT:
9
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:04:21) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = num//100 
print(a)
print(b)
-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:05:19) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = a % num//100 
print(a)
print(b)
-- OUTPUT:
9
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:05:37) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000
b = a % * num//100 
print(a)
print(b)
-- ERROR:
File "XXXX", line 3
    b = a % * num//100 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:06:08) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 + (%a)
b = num//100 
print(a)
print(b)
-- ERROR:
File "XXXX", line 2
    a = num//1000 + (%a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:06:23) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 % a
b = num//100 
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = num//1000 % a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:06:49) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100 
print(a)
print(b)
-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:23:12) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100 + a % a
print(a)
print(b)

-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:23:36) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100 + a 
print(a)
print(b)

-- OUTPUT:
9
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:24:07) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100 
print(a)
print(b)

-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:24:31) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100 
c = num/10
print(a)
print(b)

-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:24:46) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100 
c = num/10
print(a)
print(b)
print(c)

-- OUTPUT:
9
91
917.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:25:11) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100 
c = num//10
print(a)
print(b)
print(c)

-- OUTPUT:
9
91
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:26:26) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10
c = num//10
print(a)
print(b)
print(c)

-- OUTPUT:
9
9
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:26:42) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10
c = num//10
print(a)
print(b)
print(c)

-- OUTPUT:
9
9
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:26:59) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//100
c = num//10
print(a)
print(b)
print(c)

-- OUTPUT:
9
0
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:27:30) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10
c = num//10
print(a)
print(b)
print(c)

-- OUTPUT:
9
9
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:27:49) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = num//10
print(a)
print(b)
print(c)

-- OUTPUT:
9
18
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:28:46) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//100
print(a)
print(b)
print(c)

-- OUTPUT:
9
18
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:29:16) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//100 + a + b
print(a)
print(b)
print(c)

-- OUTPUT:
9
18
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:31:24) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
print(a)
print(b)
print(c)

-- OUTPUT:
9
18
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:32:10) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num/1)//1000
print(a)
print(b)
print(c)

-- OUTPUT:
9
18
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:32:29) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num/1)//1000
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
9
18
27
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:32:58) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num/1)//1000 a + b + c
print(a)
print(b)
print(c)
print(d)

-- ERROR:
File "XXXX", line 5
    d = (num/1)//1000 a + b + c
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:33:34) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num//1)//1000 a + b + c
print(a)
print(b)
print(c)
print(d)

-- ERROR:
File "XXXX", line 5
    d = (num//1)//1000 a + b + c
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:33:52) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num/1)/1000 a + b + c
print(a)
print(b)
print(c)
print(d)

-- ERROR:
File "XXXX", line 5
    d = (num/1)/1000 a + b + c
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:34:16) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num/1000)/1000 a + b + c
print(a)
print(b)
print(c)
print(d)

-- ERROR:
File "XXXX", line 5
    d = (num/1000)/1000 a + b + c
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:34:44) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num//1000)//1000 a + b + c
print(a)
print(b)
print(c)
print(d)

-- ERROR:
File "XXXX", line 5
    d = (num//1000)//1000 a + b + c
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:35:15) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = num//1000
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
9
18
27
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:35:37) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = num//1000 + a + b + c
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
9
18
27
63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:37:12) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = num//1 + a + b + c
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
9
18
27
9227
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:37:54) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num/1)//1000 + a + b + c
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
9
18
27
63.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:38:43) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num//1000) + a + b + c
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
9
18
27
63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:39:01) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + a
c = (num//10)//1000 + a + b
d = (num//1000) + a + b + c
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
9
18
27
63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:39:46) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//100 + a
c = (num//10)//1000 + a + b
d = (num//1000) + a + b + c
print(a)
print(b)
print(c)
print(d)

-- OUTPUT:
9
9
18
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:41:36) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//100 + a
print(a)
print(b)
#print(c)
#print(d)

-- OUTPUT:
9
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:41:59) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//1000 + a
print(a)
print(b)
#print(c)
#print(d)

-- OUTPUT:
9
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:43:37) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
print(a)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:43:45) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
print(a)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:46:51) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100
print(a)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:47:08) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num//100
print(a)
print(b)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:48:16) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = num/100
print(a)
print(b)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
91.73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:49:07) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)
print(a)
print(b)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:49:36) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10
print(a)
print(b)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:50:06) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)//10 + 1
print(a)
print(b)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:50:35) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num//100)
print(a)
print(b)
#print(b)
#print(c)
#print(d)

-- OUTPUT:
9
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:41:06) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num%1000)//100
print(a+b)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:41:18) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num%1000)//100
print(a+b)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:42:52) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num%1000)//100
c = (num%1000)%100//10
print(a+b)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:43:19) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num%1000)//100
c = (num%1000)%100//10
print(a+b+c)

-- OUTPUT:
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:45:19) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num%1000)//100
c = (num%1000)%100//10
d = (num%1000)%100%10
print(a+b+c+d)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:45:41) 
-- CODE:
num = int(input("Digite 4 numeros: "))
a = num//1000 
b = (num%1000)//100
c = (num%1000)%100//10
d = (num%1000)%100%10
print(a+b+c+d)

-- EXECUTION TIME:
0.15384
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
